# HAMfine-tune

./: .gitattributes  .gitignore  README.md  docker-compose.yml  get_wandb_logs.py  main.py  test_trainer.py  train.py
data/: datamodule.py  samplers.py  train_set.csv
models/: model.py  transforms.py
notebooks/: eda.ipynb
project/: docker-compose.yml  pyproject.toml  train.py
project/api/: Dockerfile  main.py  requirements.txt
project/artifacts/my-model:v2/: model.pth
project/data/: data_encoding.py  datamodule.py  enc_HAM10000_metadata.csv  samplers.py  split_csv.py  test_set.csv  val_set.csv
project/models/: model.py
project/models/weights/: resnet50_imagenet_v2.pth
project/notebooks/: eda.ipynb
project/trainer/: trainer.py
project/trainer/callbacks/: base.py
project/ui/: Dockerfile  requirements.txt
trainer/: trainer.py
trainer/callbacks/: base.py
wandb/: latest-run
wandb/offline-run-20250513_175352-hxrqjtj0/: run-hxrqjtj0.wandb
wandb/offline-run-20250518_104748-wprituj5/: run-wprituj5.wandb
wandb/offline-run-20250518_104847-n7azhhnh/: run-n7azhhnh.wandb
wandb/offline-run-20250518_104911-mstcym4q/: run-mstcym4q.wandb
wandb/offline-run-20250518_110836-2vv608el/: run-2vv608el.wandb
wandb/offline-run-20250518_111041-g65jn50c/: run-g65jn50c.wandb
wandb/offline-run-20250518_111242-29ft0kue/: run-29ft0kue.wandb
wandb/offline-run-20250518_111527-aawn2m2j/: run-aawn2m2j.wandb
wandb/offline-run-20250518_111719-ki01kjno/: run-ki01kjno.wandb
wandb/offline-run-20250518_111837-7evc096v/: run-7evc096v.wandb
(+49 files in other folders)
